Change body color to black

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,14 +8,14 @@
 }
 
 body {
-  background-color: #07070743;
+  background-color: #070707;
 }
 
 /* WAI Card */
 
-.whoami {
+/* .whoami {
   background-color: #070707;
-}
+} */
 
 .wai-card-title {
   font-family: 'Roboto', sans-serif;
