Make WIDCard more readable on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,7 +35,7 @@ body {
 
 .wid-card-title {
   font-family: 'Roboto', sans-serif;
-  font-size: 3.8rem;
+  /* font-size: 3.8rem; */
   color: black;
 }
 
