--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 * {
   user-select: none;
 }
@@ -12,10 +23,6 @@ body {
 }
 
 /* WAI Card */
-
-/* .whoami {
-  background-color: #070707;
-} */
 
 .wai-card-title {
   font-family: 'Roboto', sans-serif;
@@ -29,13 +36,8 @@ body {
 
 /* WID Card */
 
-.whatido {
-  background-color: #ffffff;
-}
-
 .wid-card-title {
   font-family: 'Roboto', sans-serif;
-  /* font-size: 3.8rem; */
   color: black;
 }
 
