--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,10 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #070707;
   user-select: none;
